# rutabaga_gfx

./: Cargo.toml  README.md  build.rs  meson.build
.github/actions/install-deps/: action.yml
.github/workflows/: presubmit.yaml
ffi/: meson.build
ffi/src/: lib.rs
ffi/src/include/: rutabaga_gfx_ffi.h
ffi/src/tests/: virtgpu_cross_domain_protocol.h
kumquat/: meson.build
kumquat/server/: Cargo.toml
kumquat/server/src/: kumquat.rs  main.rs
kumquat/server/src/kumquat_gpu/: mod.rs
src/: gfxstream.rs  handle.rs  lib.rs  meson.build  renderer_utils.rs  rutabaga_2d.rs  rutabaga_core.rs  rutabaga_utils.rs  snapshot.rs  virgl_renderer.rs
src/cross_domain/: atomic_memory_sentinel_manager.rs  common.rs  component.rs  context.rs  cross_domain_protocol.rs  mod.rs  worker.rs
src/magma/: context.rs
src/rutabaga_gralloc/: gralloc.rs  minigbm.rs  system_gralloc.rs  vulkano_gralloc.rs
src/rutabaga_gralloc/vulkano_gralloc/sys/: linux.rs  windows.rs
subprojects/: libc-0.2-rs.wrap  rustix-1-rs.wrap
subprojects/packagefiles/libc-0.2-rs/: meson.build
subprojects/packagefiles/rustix-1-rs/: 0001-rustix-add-ioctl-wrappers.patch  0002-rustix-improve-for-musl-build-without-linux-raw-sys.patch  0003-rustix-enable-rustix-thread-futex-without-linux-raw-.patch  meson.build
subprojects/packagefiles/windows-sys-0.6-rs/: meson.build
