[workspace]
members = [
    ".",
    "ffi",
    "kumquat/server",
    "third_party/mesa3d/src/virtio/magma-gpu-rs/lib",
    "third_party/mesa3d/src/magma",
]

[package]
name = "rutabaga_gfx"
version = "0.1.76"
authors = ["Magma GPU project"]
edition = "2021"
description = "Cross-platform, open-source, Rust-based graphics paravirtualization"
license = "BSD-3-Clause"
repository = "https://github.com/magma-gpu/rutabaga_gfx"
rust-version = "1.81.0"

[features]
gfxstream = []
virgl_renderer = []
gbm = []
# Vulkano features are just a prototype and not integrated yet into the ChromeOS build system.
vulkano = ["dep:vulkano"]

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.153"
log = "0.4"
remain = "0.2"
serde_json = "1"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
zerocopy = { version = "0.8.13", features = ["derive"] }
magma-gpu = { path = "third_party/mesa3d/src/virtio/magma-gpu-rs/lib", version = "0.1.76-alpha.0" }

# To build latest Vulkano, change version to git = "https://github.com/vulkano-rs/vulkano.git"
vulkano = { version = "0.33.0", optional = true }

[build-dependencies]
pkg-config = "0.3"
