[package]
name = "kumquat_virtio"
version = "0.1.76"
authors = ["Magma GPU project"]
edition = "2021"
description = "A Rust server designed for virtio-multimedia use cases"
license = "BSD-3-Clause"
repository = "https://github.com/magma-gpu/rutabaga_gfx"
rust-version = "1.81.0"

[[bin]]
name = "kumquat"
path = "src/main.rs"

[features]
gfxstream = ["rutabaga_gfx/gfxstream"]

[dependencies]
magma-gpu = { path = "../../third_party/mesa3d/src/virtio/magma-gpu-rs/lib", version = "0.1.76-alpha.0" }
rutabaga_gfx = { path = "../../", version = "0.1.76"}
zerocopy = { version = "0.8.13", features = ["derive"] }
log = "0.4"
remain = "0.2"
thiserror = "1.0.23"
clap = { version = "4.1.8", features = ["derive"] }
